# Voxora

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  eslint.config.mjs  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json
apps/hub-api/: .example.env  Cargo.toml  project.json
apps/hub-api/migrations/20260210120000_create_users/: up.sql
apps/hub-api/migrations/20260210120001_create_sessions/: up.sql
apps/hub-api/migrations/20260210120002_create_pods/: down.sql  up.sql
apps/hub-api/migrations/20260210120003_create_user_pod_bookmarks/: down.sql  up.sql
apps/hub-api/migrations/20260214120005_create_user_preferences/: up.sql
apps/hub-api/src/: config.rs  error.rs  lib.rs  main.rs
apps/hub-api/src/auth/: keys.rs  middleware.rs  mod.rs  pod.rs  sia.rs  tokens.rs
apps/hub-api/src/db/: kv.rs  schema.rs
apps/hub-api/src/models/: bookmark.rs  mod.rs  pod.rs  preferences.rs  session.rs  user.rs
apps/hub-api/src/routes/: health.rs  mod.rs  oidc.rs  pods.rs  sia.rs  turn.rs  users.rs
apps/hub-api/src/templates/: login.html
apps/hub-api/tests/: auth_keys_test.rs  auth_tokens_test.rs  oidc_test.rs  pods_test.rs  preferences_test.rs  sia_test.rs  users_test.rs
apps/hub-api/tests/common/: mod.rs
apps/pod-api/: .example.env  Cargo.toml  project.json
apps/pod-api/migrations/20260211120000_create_pod_users/: down.sql  up.sql
apps/pod-api/migrations/20260211120001_create_communities/: up.sql
apps/pod-api/migrations/20260211120002_create_roles/: up.sql
apps/pod-api/migrations/20260211120003_create_channels/: up.sql
apps/pod-api/migrations/20260211120004_create_channel_overrides/: up.sql
apps/pod-api/migrations/20260211120005_create_community_members/: down.sql  up.sql
apps/pod-api/migrations/20260211120006_create_messages/: up.sql
apps/pod-api/migrations/20260211120007_create_reactions/: up.sql
apps/pod-api/migrations/20260211120008_create_invites/: up.sql
apps/pod-api/migrations/20260211120009_create_audit_log/: up.sql
apps/pod-api/migrations/20260211120010_create_bans/: up.sql
apps/pod-api/migrations/20260211120011_add_channel_message_count/: down.sql  up.sql
apps/pod-api/migrations/20260211120012_create_read_states/: down.sql  up.sql
apps/pod-api/migrations/20260214120013_create_pod_roles/: down.sql  up.sql
apps/pod-api/migrations/20260214120014_create_pod_member_roles/: down.sql  up.sql
apps/pod-api/migrations/20260214120015_create_pod_bans/: down.sql  up.sql
apps/pod-api/migrations/20260214120016_seed_pod_everyone_role/: down.sql  up.sql
apps/pod-api/migrations/20260214120017_drop_audit_log_community_fk/: down.sql  up.sql
apps/pod-api/src/: config.rs  error.rs  lib.rs  main.rs  permissions.rs  pod_permissions.rs
apps/pod-api/src/auth/: jwks.rs  middleware.rs  mod.rs  sia.rs  tokens.rs
apps/pod-api/src/db/: kv.rs  mod.rs  pool.rs  schema.rs
apps/pod-api/src/gateway/: events.rs  fanout.rs  handler.rs  mod.rs  presence.rs  registry.rs  resume.rs  server.rs  session.rs
apps/pod-api/src/models/: audit_log.rs  ban.rs  channel.rs  channel_override.rs  community.rs  community_member.rs  invite.rs  message.rs  mod.rs  pod_ban.rs  pod_role.rs  pod_user.rs  reaction.rs  read_state.rs  role.rs
apps/pod-api/src/routes/: audit_log.rs  auth.rs  bans.rs  channel_overrides.rs  channels.rs  communities.rs  health.rs  invites.rs  members.rs  messages.rs  mod.rs  pins.rs  pod.rs  read_states.rs  roles.rs
apps/pod-api/tests/: audit_log_test.rs  auth_test.rs  bans_test.rs  channel_overrides_test.rs  channels_test.rs  communities_test.rs  gateway_test.rs  invites_test.rs  members_test.rs  messages_test.rs  pins_test.rs  pod_test.rs  reactions_test.rs  roles_test.rs
apps/pod-api/tests/common/: mod.rs
apps/web-client/: .example.env  components.json  index.html  package.json  tsconfig.app.json  vite.config.mts
apps/web-client/out-tsc/vitest/: tsconfig.spec.tsbuildinfo  vite.config.d.mts.map
apps/web-client/src/: main.tsx  routeTree.gen.ts  styles.css
apps/web-client/src/app/: app.spec.tsx  app.tsx
apps/web-client/src/components/communities/: community-dialogs.tsx
apps/web-client/src/components/editor/: editor-kit.tsx  message-kit.tsx  transforms.ts
apps/web-client/src/components/editor/plugins/: message-slash-kit.tsx
apps/web-client/src/components/layout/: chat-area.tsx  header.tsx  member-list.tsx  sidebar.tsx
apps/web-client/src/components/messages/: channel-context.tsx  message-input.tsx  message-item.tsx  message-list.tsx  pinned-messages.tsx  reactions.tsx  rich-text-content.tsx  typing-indicator.tsx
apps/web-client/src/components/ui/: export-toolbar-button.tsx  floating-toolbar-buttons.tsx  insert-toolbar-button.tsx  message-slash-node.tsx  slash-node.tsx  sonner.tsx
apps/web-client/src/lib/: oidc.ts  theme.ts
apps/web-client/src/lib/api/: hub-client.ts  hub.d.ts  pod-client.ts  pod.d.ts
apps/web-client/src/lib/gateway/: connection.ts  handler.ts  presence-idle.ts  useGatewayStatus.ts
apps/web-client/src/routes/: __root.tsx  _authenticated.tsx  callback.tsx  login.tsx  signup.tsx
apps/web-client/src/routes/_authenticated/: index.tsx  settings.tsx
apps/web-client/src/stores/: auth.ts  communities.ts  messages.ts  pins.ts  pod.ts  presence.ts  typing.ts
apps/web-client/src/types/: gateway.ts
docs/: PHASE-1-IMPLEMENTATION.md  PHASE-2-IMPLEMENTATION.md  RFC-0001-voxora-platform.md
libs/common/src/: id.rs  lib.rs  snowflake.rs
libs/voxora-common/: Cargo.toml
libs/voxora-common/src/: lib.rs
scripts/: dev.sh  init-db.sql  setup-db.sh
(+5 files in other folders)
