[package]
name = "hub-api"
version = "0.1.0"
edition = "2021"
default-run = "hub-api"

[dependencies]
voxora-common = { path = "../../libs/common" }

argon2 = "0.5"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2", features = ["postgres", "chrono"] }
diesel-async = { version = "0.5", features = ["postgres", "deadpool", "async-connection-wrapper"] }
diesel_migrations = "2"
dotenvy = "0.15"
ed25519-dalek = { version = "2", features = ["rand_core"] }
futures-util = { version = "0.3", features = ["alloc"] }
hmac = "0.12"
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
password-hash = "0.5"
rand = "0.8"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5", features = ["chrono"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }

[dev-dependencies]
axum-test = "18"
http = "1"
tower = { version = "0.5", features = ["util"] }

[[bin]]
name = "hub-api"
path = "src/main.rs"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[[bin]]
name = "generate-openapi"
path = "src/bin/generate_openapi.rs"
