[package]
name = "pod-api"
version = "0.1.0"
edition = "2021"

[dependencies]
voxora-common = { path = "../../libs/voxora-common" }

async-trait = "0.1"
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2", features = ["postgres", "chrono"] }
diesel-async = { version = "0.5", features = ["postgres", "deadpool", "async-connection-wrapper"] }
diesel_migrations = "2"
dotenvy = "0.15"
futures-util = { version = "0.3", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
axum-test = "16"
http = "1"
tower = { version = "0.5", features = ["util"] }

[[bin]]
name = "pod-api"
path = "src/main.rs"

[[bin]]
name = "pod-migrate"
path = "src/bin/migrate.rs"
