[package]
name = "pod-api"
version = "0.1.0"
edition = "2021"
default-run = "pod-api"

[dependencies]
voxora-common = { path = "../../libs/common" }

async-trait = "0.1"
dashmap = "6"
axum = { version = "0.8", features = ["macros", "ws"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2", features = ["postgres", "chrono"] }
diesel-async = { version = "0.5", features = ["postgres", "deadpool", "async-connection-wrapper"] }
diesel_migrations = "2"
dotenvy = "0.15"
futures-util = { version = "0.3", features = ["alloc"] }
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
parking_lot = "0.12"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "blocking"] }
rpassword = "5"
sha2 = "0.10"
scoped-futures = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5", features = ["chrono"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }

[dev-dependencies]
axum-test = "18"
ed25519-dalek = "2"
futures-util = "0.3"
http = "1"
tokio-tungstenite = "0.26"
tower = { version = "0.5", features = ["util"] }

[[bin]]
name = "pod-api"
path = "src/main.rs"

[[bin]]
name = "pod-migrate"
path = "src/bin/migrate.rs"

[[bin]]
name = "generate-openapi"
path = "src/bin/generate_openapi.rs"

[[bin]]
name = "pod-setup"
path = "src/bin/setup.rs"
